# not-auto

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  build-livekit-gstreamer-macos.sh  build.rs  generate-viewer-token.py  requirements_flame.txt
.cargo/: config.toml
.github/workflows/: ci-rs.yml
scripts/: demo_gradio_gaussian.py
src/: main.rs
src/plugins/: capture_frame.rs  dit_vggt_stream.rs  gstreamer_livekit.rs  image_copy.rs  livekit_stream.rs  mod.rs  vggt_stream.rs  vggt_worker.py
