[package]
name = "not-auto"
version = "0.0.1"
edition = "2024"
rust-version = "1.85.0"


[dependencies]
anyhow = "1.0.75"
bevy = { default-features = false, version = "0.16.0", features = [
    "bevy_asset",
    "bevy_animation",
    # "bevy_audio",
    "bevy_core_pipeline",
    "bevy_gizmos",
    # "bevy_gltf",
    "bevy_image",
    "bevy_pbr",
    "bevy_log",
    "bevy_remote",
    "bevy_render",
    "bevy_state",
    "bevy_scene",
    "bevy_window",
    "bevy_text",
    "hdr",
    "png",
    "jpeg",
] }
shellexpand = "3.0"
crossbeam-channel = "0.5.14"
log = "0.4.20"
pretty_env_logger = "0.5.0"
openssl = { version = "0.10.63", features = ["vendored"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
avian3d = "0.3.0"
dotenvy = "0.15.7"
livekit = { git = "https://github.com/livekit/rust-sdks.git", package = "livekit", features = ["native-tls"] }
livekit-api = { git = "https://github.com/livekit/rust-sdks.git", package = "livekit-api", features = ["services-tokio", "native-tls"] }
livekit-protocol = { git = "https://github.com/livekit/rust-sdks.git", package = "livekit-protocol" }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
async-channel = "2.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
bevy_gaussian_splatting = { git = "https://github.com/mosure/bevy_gaussian_splatting", version = "5.0.6" }

gstreamer = "0.21.1"
gstreamer-app = "0.21.1"
gstreamer-video = "0.21.1"
gstreamer-webrtc = "0.21.1"